Revert "Merge branch 'develop' into feature/ui-dev/refactorProduction"
This reverts commit 2e0677f3f3db3fe378913a29ca7b82a6893b4bb7, reversing
changes made to a8e0b351889e7730b50abf2176c89523cb12860d.