@@ -3,6 +3,7 @@ package io.openems.edge.app.heat;
 import java.util.EnumMap;
 import java.util.List;
 import java.util.TreeMap;
+import java.util.stream.Collectors;
 
 import org.osgi.service.cm.ConfigurationAdmin;
 import org.osgi.service.component.ComponentContext;
@@ -19,7 +20,6 @@ import io.openems.common.types.EdgeConfig;
 import io.openems.common.utils.JsonUtils;
 import io.openems.edge.app.heat.CombinedHeatAndPower.Property;
 import io.openems.edge.common.component.ComponentManager;
-import io.openems.edge.core.appmanager.AbstractEnumOpenemsApp;
 import io.openems.edge.core.appmanager.AbstractOpenemsApp;
 import io.openems.edge.core.appmanager.AppAssistant;
 import io.openems.edge.core.appmanager.AppConfiguration;
@@ -28,7 +28,6 @@ import io.openems.edge.core.appmanager.ComponentUtil;
 import io.openems.edge.core.appmanager.ConfigurationTarget;
 import io.openems.edge.core.appmanager.DefaultEnum;
 import io.openems.edge.core.appmanager.JsonFormlyUtil;
-import io.openems.edge.core.appmanager.Nameable;
 import io.openems.edge.core.appmanager.OpenemsApp;
 import io.openems.edge.core.appmanager.OpenemsAppCardinality;
 import io.openems.edge.core.appmanager.OpenemsAppCategory;
@@ -64,9 +63,9 @@ import io.openems.edge.core.appmanager.validator.ValidatorConfig;
  * </pre>
  */
 @org.osgi.service.component.annotations.Component(name = "App.Heat.CHP")
-public class CombinedHeatAndPower extends AbstractEnumOpenemsApp<Property> implements OpenemsApp {
+public class CombinedHeatAndPower extends AbstractOpenemsApp<Property> implements OpenemsApp {
 
-	public static enum Property implements DefaultEnum, Nameable {
+	public static enum Property implements DefaultEnum {
 		// Component-IDs
 		CTRL_CHP_SOC_ID("ctrlChpSoc0"), //
 		// Properties
@@ -142,7 +141,7 @@ public class CombinedHeatAndPower extends AbstractEnumOpenemsApp<Property> imple
 						.add(JsonFormlyUtil.buildSelect(Property.OUTPUT_CHANNEL) //
 								.setOptions(this.componentUtil.getAllRelays() //
 										.stream().map(r -> r.relays).flatMap(List::stream) //
-										.toList()) //
+										.collect(Collectors.toList())) //
 								.setDefaultValueWithStringSupplier(() -> {
 									var relays = this.componentUtil.getPreferredRelays(Lists.newArrayList(),
 											new int[] { 1 }, new int[] { 1 });
@@ -163,12 +162,12 @@ public class CombinedHeatAndPower extends AbstractEnumOpenemsApp<Property> imple
 	@Override
 	public AppDescriptor getAppDescriptor() {
 		return AppDescriptor.create() //
-				.setWebsiteUrl("https://fenecon.de/fenecon-fems/fems-app-power-to-heat/") //
+				.setWebsiteUrl("https://fenecon.de/produkte/fems/fems-app-blockheizkraftwerk-bhkw/") //
 				.build();
 	}
 
 	@Override
-	public OpenemsAppCategory[] getCategories() {
+	public OpenemsAppCategory[] getCategorys() {
 		return new OpenemsAppCategory[] { OpenemsAppCategory.HEAT };
 	}
 
